syntax = "proto3";

option csharp_namespace = "grpcArachne";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service AtributForm
{
	rpc GetDivisBarang(Empty)returns(ListDivisibarang);
	rpc GetKategoriBarang(Empty)returns(ListKategoribarang);
}

message Empty
{

}

message DivisiBarang
{
	int64 IdDivisi =1;
	google.protobuf.StringValue Divisi=2;
	int64 IdSubDivisi=3;
	google.protobuf.StringValue Kode=4;
	google.protobuf.StringValue Keterangan=5;
}

message KategoriBarang
{
	int64 IdKategori =1;
	google.protobuf.StringValue Kategori=2;
	int64 IdSubKategori=3;
	google.protobuf.StringValue Subkategori=4;
}

message ListDivisibarang
{
	repeated DivisiBarang DivisiBarang=1;
}
message ListKategoribarang
{
	repeated KategoriBarang KategoriBarang=1;
}

